added styles and structures

--- a/index.html
+++ b/index.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <title>Personal Portfolio</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-</body>
+    <! navbar--
+    <header>
+        <nav class="navbar">
+            <div class="logo">My Portfolio</div>
+            <p=nav-links">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </p>
+        </nav>
+    </header>
+    <!-- Main Content -->
+     <main>
+         <section class="hero">
+            <div class="hero-text">
+                         <p>Hello! my name is Luckyann
+                    <h1>I'm a passionate web developer.</h1>
+                 <h3>Welcome to my portfolio!</h3>
+                 <a href="#projects" class="btn">View My Work</a>
+                </div>
+                <div class="hero-image">
+                    <img src="my photo.jpg" alt="My Photo" />
+                </div>
+                </section>
+
+         <section class="projects">
+             <h2>My Projects</h2>
+             <p>Here are some of my recent works.
+                <ul>
+                    <li>Project 1: finished my soft skills assignments.</li>
+                    <li>Project 2: went through canva phase 0 content.</li>
+                    <li>Project 3: completed phase0 labs and assignments.</li>
+                </ul>
+             </p>
+         </section>
+         <section id="contact">
+             <h2>Contact Me</h2>
+             <p>
+                <ul>
+                    <li>Feel free to reach out!</li>
+                    <li>Email: kagendoluckyann@gmail.com</li>
+                    <li>Phone: +254987654321</li>
+                </ul>
+             </p>
+         </section>
+     </main>
+    </body>
 </html>
